# C-Projects

./: CMakeLists.txt  granice.cpp  oszczednosc.cpp  program.cpp  wynik
oop_cpp/: oop1.cpp  oop2.cpp  oop2.ilk  oop3.cpp  oop3.ilk  oop4.cpp  oop_lab1.cpp  oop_lab_dodatkowe.cpp
projekt_3/: koszyk.cpp  koszyk.h  main.cpp  produkt.cpp  produkt.h
projekt_3_dodatkowe/: katalog.cpp  katalog.h  main.cpp  samochod.cpp  samochod.h
projekt_4/: main.cpp  wektor.cpp  wektor.h
stare/: Kombinatoryka.cpp  kwadratowa.cpp  math.cpp  mathrep2.cpp  mathrepetition copy.cpp  mathzadanie2.cpp  test.cpp  zadaniemath.cpp
zajecia3_przyklad_implementacji_tego_gowna/: car.cpp  car.h  info.txt  main.cpp  tasks.json
